fix: step 2 button alignment

--- a/apps/gauzy/src/app/@shared/organizations/organizations-step-form/organizations-step-form.component.scss
+++ b/apps/gauzy/src/app/@shared/organizations/organizations-step-form/organizations-step-form.component.scss
@@ -14,6 +14,9 @@ nb-card-body {
 		display: flex;
 		justify-content: flex-start;
 		gap: 10px;
+		&.two{
+			margin-left: 15px;
+		}
 	}
 
 	.no-image {
